--- a/templates/registration.html
+++ b/templates/registration.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    {% extends 'Dummy.html' %}
+
+    {% block title %}
+    <title>Registration</title>
+    {% endblock %}
 </head>
 <body>
+    {% block body_block %}
     <center>
         <h1>registration Form</h1>
 
@@ -30,6 +35,7 @@
 
 
     </center>
+    {% endblock %}
     
 </body>
 </html>
